# cv-builder-backend

./: .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt  setup.py  test.db
app/: __init__.py  config.py  database.py  main.py
app/api/: auth.py  cover_letter.py  cv.py  preview.py  protected_route.py  sections.py  templates.py
app/data/: default_templates.py
app/middleware/: auth.py
app/models/: __init__.py  ai_models.py  auth.py  cv.py  database.py  responses.py  section.py  templates.py  user.py
app/scripts/: init_templates.py
app/services/: ai_service.py  cover_letter_export_service.py  cv_service.py  export_service.py  pdf_service.py  preview_service.py  section_service.py  storage_service.py  template_service.py
app/templates/cover_letters/: basic.html
app/templates/cv/: classic.html  modern.html  professional.html
app/templates/email/: email_verification.html  password_reset.html
app/utils/: auth.py  email.py  redis.py
